[project]
name = "dalle-image-gen"
version = "0.1.0"
description = "Super simple helper for generating images with Dall-E"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "jupyterlab-vim>=4.1.4",
    "openai>=1.64.0",
    "rich>=13.9.4",
]
